# athena

./: .gitignore  pyproject.toml  requirements.txt
src/cli/: ingest.py  list.py  main.py  search.py  tag.py
src/cli/actions/: db.py  ingest.py
src/core/: config.py  scopes.py
src/db/: cleanup.py  init.py
src/db/lib/: common.py  crud.py
src/db/music/: read.py  write.py
src/db/ops/: cleanup.py  init.py
src/db/schema/: spotify.sql
src/db/schemas/: internal.sql  spotify.sql
src/db/spin/: cleanup.py
src/etl/: README.md  base.py
src/etl/spotify/: play_history_job.py
src/ingestion/: local_store.py
src/integrations/spotify/: auth.py  ingest.py
