[project]
name = "athena"
version = "0.1.0"
description = "Athena CLI - developer-first semantic memory"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
athena = "cli.main:app"

[tool.setuptools]
packages = ["cli", "ingestion", "embedding", "retrieval", "sdk", "vectorstore", "chunking", "api"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src", "api", "chunking", "cli", "embedding", "ingestion", "retrieval", "sdk", "vectorstore"]